--- a/XamarinZ1/app/app/Views/LoginPage.xaml
+++ b/XamarinZ1/app/app/Views/LoginPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             BindingContext="{Binding Main, Source={StaticResource Locator}}"
              x:Class="app.Views.LoginPage">
     <ContentPage.Content>
         <ScrollView>
@@ -22,6 +23,7 @@
                         <Entry
                             Grid.Column="1"
                             Grid.Row="0"
+                            Text="{Binding Email, Mode=TwoWay}"
                             Placeholder="Ingrese su correo">
                         </Entry>
                         <Label
@@ -34,16 +36,19 @@
                             Grid.Column="1"
                             Grid.Row="1"
                             IsPassword="True"
+                            Text="{Binding Password, Mode=TwoWay}"
                             Placeholder="Ingrese su clave">
                     </Entry>
                 </Grid>
                 <ActivityIndicator
-                   IsRunning="False">
+                   IsRunning="{Binding IsRunning}">
                 </ActivityIndicator>
+
                 <Button
                     Text="Login"
                     TextColor="FloralWhite"
-                    BackgroundColor="SeaGreen">
+                    BackgroundColor="SeaGreen"
+                    Command="{Binding cmdLogin, Mode=TwoWay}">
                 </Button>
         </StackLayout>
         </ScrollView>
